Add more analysis tools/tests